panel_2 wrapping issue and removal of .left and .right classes in panels

--- a/app/stylesheets/grid.sass
+++ b/app/stylesheets/grid.sass
@@ -52,25 +52,22 @@ body
 #col_left
   position: relative
   z-index: 1
+  width: 640px
+  float: left
+
+#col_right
+  position: relative
+  z-index: 1
+  width: 320px
+  float: left
+
+.panel_1, #hotTopicBar
   +grid(8)
-  +grid-children
+.feature_bg
   .left
     +alpha
   .right
     +omega
-#col_right
-  position: relative
-  z-index: 1
-  +grid(4)
-  +grid-children
-  .panel_2
-    +alpha
-    +omega
-
-.panel_1, #hotTopicBar
-  +grid(8)
-  +alpha
-  +omega
 
 .panel_2
   +grid(4)
